@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-954] fix typo in default trigger names (Richlv)
  - [ZBX-1746] fixed problems viewing map element (Aly)
  - [ZBX-1763] applied patch with translation for some javascript strings (Aly)
  - [DEV-447,DEV-448] added support of net.if.* under Windows (Sasha)
